<resources>
    <string name="app_name">Knitting Yarn Calc</string>

    <string name="title_home">Home</string>
    <string name="title_weights">Weights</string>
    <string name="title_info">Info</string>

    <string name="gauge_label">Gauge</string>
    <string name="size_label">Size</string>
    <string name="yarn_needed_label">Yarn Reqd</string>
    <string name="ball_size_label">Ball Size</string>
    <string name="balls_needed_label">Balls</string>
    <string name="needle_size">Needles</string>
    <string name="gauge">Gauge</string>
    <string name="gauge_length">stitches/4" or 10cm</string>
    <string name="wpi">wpi (windings/inch)</string>
    <string name="meter_abbr">m</string>
    <string name="per">per</string>
    <string name="gram_abbr">g</string>
    <string name="yarn_ball">ball</string>
    <string name="length_label">Length</string>
    <string name="width_label">Width</string>
    <string name="copyright">© Deborah Engelmeyer, The Inquisitive Introvert, 2020</string>
    <string name="sweater_sizing">Sweater and vest sizing based on Standard Body Measurements published by Craft Yarn Council.</string>
    <string name="sweater_dims">Sweater and vest size dimensions are finished size.  Sweaters and vests are straight hip-length garments.  Sweaters have drop shoulders and tapered sleeves.  Use less yarn for fitted garments and more yarn for longer garments.</string>
    <string name="blanket_info">Blanket and scarf measurements are finished size.  Add more yarn for tassels.</string>
    <string name="hats_dims">Toque and Tam measurements are head size, not garment size.</string>
    <string name="credits">Yarn estimates based on calculations by The Inquisitive Introvert.</string>

    <!-- initial settings for each project, use -im for US -->
    <string name="project_settings">%s-im.json</string>

    <!-- project names -->
    <string name="yarn_needed">Yarn Needed:</string>
    <string name="icon8">Icon8</string>
    <string name="icons">Icons:</string>
    <string name="title_privacy">Privacy Policy</string>
    <!-- project names -->
    <string name="mittens">Mittens</string>
    <string name="gloves">Gloves</string>
    <string name="socks">Socks</string>
    <string name="tam">Tam</string>
    <string name="scarf">Scarf</string>
    <string name="toque">Toque</string>
    <string name="sweater">Sweater</string>
    <string name="vest">Vest</string>
    <string name="blanket">Blanket</string>

    <!-- yarn weight names -->
    <string name="fingering_yarn">Fingering</string>
    <string name="sport_yarn">Sport</string>
    <string name="dk_yarn">DK</string>
    <string name="worsted_yarn">Worsted</string>
    <string name="aran_yarn">Aran</string>
    <string name="bulky_yarn">Bulky</string>
    <string name="super_bulky_yarn">Super Bulky</string>
    <string name="jumbo_yarn">Jumbo</string>

    <!-- other weight strings -->
    <string name="needle_range_format">%1$.2f-%2$.2f %3$s</string>
    <string name="needle_format">%.2f mm</string>
    <string name="unit_range_format">%1$d-%2$d %3$s</string>
    <string name="unit_format">%1$d %2$s</string>
    <string name="mm_unit">mm</string>
    <string name="density_format">%1$dm per %2$dg ball</string>
</resources>
