<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="3"
    android:rowOrderPreserved="true"
    tools:context="com.inqint.yarnrequirements.ProjectFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:text="@string/sweater"
        android:id="@+id/name"
        style="@style/headerStyle"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_columnSpan="2"
        android:src="@drawable/sweater"
        android:id="@+id/image" />

    <!-- Gauge, Row 1 -->
    <TextView
        style="@style/paramTextStyle"
        android:text="Gauge:"
        android:id="@+id/gaugeLabel"
        android:layout_column="0"
        android:layout_row="1" />

    <EditText
        style="@style/paramTextStyle"
        android:inputType="numberDecimal"
        android:ems="4"
        android:id="@+id/editGauge"
        android:editable="true"
        android:background="@drawable/rounded_box"
        android:layout_row="1"
        android:layout_column="1" />

    <Spinner
        style="@style/paramTextStyle"
        android:id="@+id/gaugeUnitsSpinner"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/editGauge"
        android:layout_column="2"
        android:layout_row="1" />

    <!-- Size, Row 2 -->
    <TextView
        style="@style/paramTextStyle"
        android:text="@string/size_label"
        android:id="@+id/sizeLabel"
        android:layout_below="@id/gaugeLabel"
        android:layout_row="2"
        android:layout_column="0" />

    <EditText
        style="@style/paramTextStyle"
        android:inputType="numberDecimal"
        android:ems="4"
        android:id="@+id/editLength"
        android:editable="true"
        android:background="@drawable/rounded_box"
        android:layout_column="1"
        android:layout_row="2" />

    <Spinner
        style="@style/paramTextStyle"
        android:id="@+id/lengthUnitsSpinner"
        android:layout_column="2"
        android:layout_row="2" />

    <!-- Yarn Needed, Row 3 -->
    <TextView
        style="@style/paramTextStyle"
        android:text="Yarn Needed:"
        android:id="@+id/yarnNeededLabel"
        android:layout_column="0"
        android:layout_row="3" />

    <TextView
        style="@style/paramTextStyle"
        android:ems="4"
        android:id="@+id/yarnNeededText"
        android:layout_column="1"
        android:layout_row="3"
        android:text="1000" />

    <Spinner
        style="@style/paramTextStyle"
        android:id="@+id/yarnUnitsSpinner"
        android:layout_row="3"
        android:layout_column="2" />

    <!-- Ball Size, row 4 -->
    <TextView
        style="@style/paramTextStyle"
        android:text="@string/ball_size_label"
        android:id="@+id/ballSizeLabel"
        android:layout_column="0"
        android:layout_row="4" />

    <EditText
        style="@style/paramTextStyle"
        android:id="@+id/editBallSize"
        android:ems="4"
        android:editable="true"
        android:background="@drawable/rounded_box"
        android:layout_column="1"
        android:layout_row="4" />

    <Spinner
        style="@style/paramTextStyle"
        android:id="@+id/ballSizeSpinner"
        android:layout_row="4"
        android:layout_column="2" />

    <!-- Balls Needed, row 5 -->
    <TextView
        style="@style/paramTextStyle"
        android:text="@string/balls_needed_label"
        android:id="@+id/ballsNeededLabel"
        android:layout_column="0"
        android:layout_row="5" />

    <TextView
        style="@style/paramTextStyle"
        android:id="@+id/ballsNeededText"
        android:ems="4"
        android:layout_column="1"
        android:layout_row="5" />

    <Spinner
        style="@style/paramTextStyle"
        android:id="@+id/ballFractSpinner"
        android:layout_row="4"
        android:layout_column="2" />

</GridLayout>
